--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя персональная страница</title>
+    <title>Glerik - Портфолио</title>
     <link rel="stylesheet" href="style.css">
     <!-- Подключение библиотеки иконок (Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -15,69 +15,57 @@
     <div class="container">
         <!-- КАРТОЧКА ПРОФИЛЯ -->
         <div class="profile-card">
-            <img src="https://i.pravatar.cc/150" alt="Фото профиля" class="profile-img">
-            <h1>Ваше Имя</h1>
-            <p class="subtitle">Веб-разработчик / Администратор / Ваш титул</p>
+            <img src="https://glerik.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F0141d864-46f9-4670-87f5-5b4d79a2f3a6%2F062c3584-c5a4-448f-8488-84227918a0ab%2Fava.webp?table=block&id=e435e954-c9f2-4a7b-a48e-d958863f58a4&spaceId=0141d864-46f9-4670-87f5-5b4d79a2f3a6&width=250&userId=&cache=v2" alt="Фото профиля" class="profile-img">
+            <h1>Glerik</h1>
+            <p class="subtitle">QA | Automation | Web | Python | SQL | Administration</p>
             
             <div class="social-links">
-                <a href="https://github.com/your-username" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://t.me/your-username" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
-                <a href="https://linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:your-email@example.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://vk.com/glerik" target="_blank" aria-label="VK"><i class="fab fa-vk"></i></a>
+                <a href="https://t.me/glerik" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+                <a href="https://github.com/glerik23" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="mailto:glerik@yandex.ru" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
 
         <!-- ТАБЛИЦА В СТИЛЕ NOTION -->
         <div class="table-card">
-            <h2>Проекты и задачи</h2>
+            <h2>Разработка и администрирование</h2>
             <p>Здесь собраны мои текущие проекты, задачи и полезные ресурсы. Используйте поиск для быстрой навигации.</p>
             
             <table id="projectsTable" class="display" style="width:100%">
                 <thead>
                     <tr>
-                        <th>Название проекта</th>
+                        <th>Название</th>
+                        <th>Стек</th>
                         <th>Статус</th>
-                        <th>Технологии</th>
-                        <th>Дедлайн</th>
                         <th>Ссылка</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Пример строк, вы можете добавить свои -->
+                    <!-- Данные из вашего Notion -->
                     <tr>
-                        <td>Разработка личного портфолио</td>
-                        <td>В процессе</td>
+                        <td>Сайт-портфолио</td>
                         <td>HTML, CSS, JS</td>
-                        <td>2025-08-01</td>
-                        <td><a href="#">Посмотреть</a></td>
+                        <td>В процессе</td>
+                        <td><a href="https://glerik23.github.io/" target="_blank">Посмотреть</a></td>
                     </tr>
                     <tr>
-                        <td>Настройка CI/CD для проекта "Alpha"</td>
-                        <td>Завершено</td>
-                        <td>GitLab CI, Docker</td>
-                        <td>2025-07-20</td>
-                        <td><a href="#">Отчет</a></td>
+                        <td>Автотесты для API</td>
+                        <td>Python, Pytest, Requests</td>
+                        <td>В процессе</td>
+                        <td><a href="https://github.com/glerik23/play_tests" target="_blank">Репозиторий</a></td>
                     </tr>
                     <tr>
-                        <td>Изучение FastAPI</td>
-                        <td>Запланировано</td>
-                        <td>Python, FastAPI</td>
-                        <td>2025-09-15</td>
-                        <td><a href="#">Материалы</a></td>
+                        <td>Дашборд в Grafana</td>
+                        <td>Grafana, Prometheus, Docker</td>
+                        <td>Поддержка</td>
+                        <td><a href="https://github.com/glerik23" target="_blank">Пример</a></td>
                     </tr>
                      <tr>
-                        <td>Администрирование сервера Ubuntu</td>
+                        <td>Управление VPS</td>
+                        <td>Linux, Nginx, Docker</td>
                         <td>Активно</td>
-                        <td>Linux, Nginx, SSH</td>
-                        <td>Постоянно</td>
-                        <td><a href="#">Документация</a></td>
-                    </tr>
-                    <tr>
-                        <td>Дизайн для мобильного приложения</td>
-                        <td>Завершено</td>
-                        <td>Figma</td>
-                        <td>2025-06-30</td>
-                        <td><a href="#">Макеты</a></td>
+                        <td><a href="https://github.com/glerik23" target="_blank">Документация</a></td>
                     </tr>
                 </tbody>
             </table>
