--- a/index.html
+++ b/index.html
@@ -10,18 +10,6 @@
 </head>
 <body>
 
-    <!-- ========================================================== -->
-    <!-- НОВЫЙ БЛОК: ВЕРХНЯЯ ИНФОРМАЦИОННАЯ ПАНЕЛЬ (ЛЕГЕНДА)        -->
-    <!-- ========================================================== -->
-    <div class="top-legend">
-        <span>Имя стримера/название сервера</span>
-        <span>Количество участников</span>
-        <span class="tag tag-moderator">Должность</span>
-        <span class="tag tag-active">Статус</span>
-        <span class="legend-separator">***************** --></span>
-    </div>
-
-
     <div class="main-container">
 
         <!-- ===== СЕКЦИЯ ПРОФИЛЯ ===== -->
@@ -125,7 +113,12 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Hamilthone</td>
+                            <td>
+                                <div class="table-cell-with-avatar">
+                                    <img src="https://i.pravatar.cc/32?u=hamilthone_telegram" alt="avatar" class="table-avatar">
+                                    <span>Hamilthone</span>
+                                </div>
+                            </td>
                             <td>30000+</td>
                             <td><span class="tag tag-moderator">Moderator</span></td>
                             <td>13/09/2023 →</td>
@@ -194,8 +187,22 @@
             
             <!-- ===== БЛОК НАВЫКОВ ===== -->
              <div class="skills-card">
-                <!-- Содержимое без изменений -->
-             </div>
+                <div class="skill-item">
+                    <span class="skill-title">Joined Discord:</span>
+                    <span class="skill-value">27/03/2018</span>
+                </div>
+                <div class="skill-item">
+                    <span class="skill-title">Skills:</span>
+                    <span class="skill-value">
+                        <span class="skill-color-green">Embeds</span>, 
+                        <span class="skill-color-green">server setup</span>, 
+                        <span class="skill-color-green">server administration</span>, 
+                        <span class="skill-color-purple">server creating</span>, 
+                        <span class="skill-color-red">server design</span>, 
+                        <span>extensive experience in moderation.</span>
+                    </span>
+                </div>
+            </div>
         </main>
     </div>
 
